--- a/no1.html
+++ b/no1.html
@@ -29,9 +29,10 @@
       <p>Lorem ipsum dolor sit amet.</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
+        <a href="yes.html" style="transform: scale(1.2);">Yes</a>
         <a href="no2.html">No</a>
       </div>
     </div>
   </body>
 </html>
+
