--- a/no1.html
+++ b/no1.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Soch le ache se! 🙄</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h1>Are you sure? 🥺</h1>
+      <p>Wait, did you misclick? 🤨</p>
 
       <div class="btn">
         <a href="yes.html" style="transform: scale(1.2);">Yes</a>
@@ -35,4 +35,5 @@
     </div>
   </body>
 </html>
+
 
