--- a/no2.html
+++ b/no2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>4Emma</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -28,13 +28,14 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h1>Think about it again... 😭</h1>
+      <p>Are you really, really sure? 😢</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
+        <a href="yes.html" style="transform: scale(1.5);">Yes</a>
         <a href="no3.html">No</a>
       </div>
     </div>
   </body>
 </html>
+
