--- a/no3.html
+++ b/no3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>:3</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -30,11 +30,11 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h1>Please? I'll be the best! ✨</h1>
+      <p>Okay, now you're just being mean! Try to catch it if you can. 😂</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
+        <a href="yes.html" style="transform: scale(2); background-color: #ff4d6d; color: white;">Yes</a>
         <a href="#" id="move-random">No</a>
       </div>
     </div>
@@ -42,3 +42,4 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
