--- a/no3.html
+++ b/no3.html
@@ -33,7 +33,7 @@
       <h1>Please? I'll be the best! ✨</h1>
       <p>Okay, now you're just being mean! Try to catch it if you can. 😂</p>
 
-      <div class="btn">
+      <div class="btn-wrapper">
         <a href="yes.html" style="transform: scale(2); background-color: #ff4d6d; color: white;">Yes</a>
         <a href="#" id="move-random">No</a>
       </div>
@@ -42,4 +42,5 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
 
