--- a/yes.html
+++ b/yes.html
@@ -28,5 +28,15 @@
       ></script>
       <h1>Hehehehe, I knew it! 😘</h1>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script>
+  confetti({
+    particleCount: 150,
+    spread: 70,
+    origin: { y: 0.6 },
+    colors: ['#ff4d6d', '#ffb3c1', '#ffffff']
+  });
+</script>
   </body>
 </html>
+
