--- a/no3.html
+++ b/no3.html
@@ -34,7 +34,7 @@
       <p>Okay, now you're just being mean! Try to catch it if you can. 😂</p>
 
       <div class="btn">
-        <a href="yes.html" style="transform: scale(2); background-color: #ff4d6d; color: white;">Yes</a>
+        <a href="yes.html" id="yes-btn">Yes</a>
         <a href="#" id="move-random">No</a>
       </div>
     </div>
@@ -42,6 +42,7 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
 
 
 
