--- a/no2.html
+++ b/no2.html
@@ -32,10 +32,11 @@
       <p>Are you really, really sure? 😢</p>
 
       <div class="btn">
-        <a href="yes.html" style="transform: scale(1.5);">Yes</a>
+        <a href="yes.html" id="yes-btn">Yes</a>
         <a href="no3.html">No</a>
       </div>
     </div>
   </body>
 </html>
+
 
