--- a/no1.html
+++ b/no1.html
@@ -29,12 +29,13 @@
       <p>Wait, did you misclick? 🤨</p>
 
       <div class="btn">
-        <a href="yes.html" style="transform: scale(1.2);">Yes</a>
+        <a href="yes.html" id="yes-btn">Yes</a>
         <a href="no2.html">No</a>
       </div>
     </div>
   </body>
 </html>
+
 
 
 
