--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Be my Valentine? 🌹</h1>
-      <p>I have something to ask you... 🫣</p>
+      <p>-Turmu</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
@@ -35,5 +35,6 @@
     </div>
   </body>
 </html>
+
 
 
