--- a/no1.html
+++ b/no1.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Are you sure? 🥺</h1>
-      <p>Wait, did you misclick? 🤨</p>
+      <p>Anduurch darsn blgude? 🤨</p>
 
       <div class="btn">
         <a href="yes.html" style="transform: scale(1.2);">Yes</a>
@@ -35,6 +35,7 @@
     </div>
   </body>
 </html>
+
 
 
 
