--- a/no3.html
+++ b/no3.html
@@ -31,7 +31,7 @@
       ></script>
 
       <h1>Please? I'll be the best! ✨</h1>
-      <p>Okay, now you're just being mean! Try to catch it if you can. 😂</p>
+      <p>Okay, now you're just being mean! Try to catch it if you can. ψ(｀∇´)ψ</p>
 
       <div class="btn">
         <a href="yes.html" id="yes-btn">Yes</a>
@@ -42,6 +42,7 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
 
 
 
