--- a/index.html
+++ b/index.html
@@ -27,14 +27,41 @@
       ></script>
       <h1>Be my Valentine? 🌹</h1>
       <p>-Turmu</p>
-
       <div class="btn">
         <a href="yes.html">Yes</a>
         <a href="no1.html">No</a>
       </div>
     </div>
+    <audio id="bgMusic" src="music.mp3" loop></audio>
+
+<script>
+  window.addEventListener('load', () => {
+    const audio = document.getElementById('bgMusic');
+    
+    // 1. Хадгалсан цагийг шалгаж, тэндээс нь эхлүүлэх
+    const savedTime = localStorage.getItem('musicPosition');
+    if (savedTime) {
+      audio.currentTime = parseFloat(savedTime);
+    }
+
+    // 2. Хэрэглэгч дэлгэц дээр нэг дарахад дуу явж эхэлнэ
+    document.body.addEventListener('click', () => {
+      if (audio.paused) {
+        audio.play().catch(e => console.log("Дуу тоглуулахад алдаа гарлаа:", e));
+      }
+    }, { once: true });
+
+    // 3. Дууны цагийг 0.5 секунд тутамд localStorage-д хадгалах
+    setInterval(() => {
+      if (!audio.paused) {
+        localStorage.setItem('musicPosition', audio.currentTime);
+      }
+    }, 500);
+  });
+</script>
   </body>
 </html>
+
 
 
 
